--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <p>Is it up?</p>
+    <p>Welcome to the chat app :)!</p>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/index.js"></script>
   </body>
